/*
 * Copyright 2018 The Kubeflow Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import { render, screen } from '@testing-library/react';
import HTMLViewer, { HTMLViewerConfig } from './HTMLViewer';
import { PlotType } from './Viewer';
import { flushPromisesInAct } from '../../TestUtils';

describe('HTMLViewer', () => {
  it('does not break on empty data', () => {
    const { asFragment } = render(<HTMLViewer configs={[]} />);
    expect(asFragment()).toMatchSnapshot();
  });

  const html = '<html><body><div>Hello World!</div></body></html>';
  const config: HTMLViewerConfig = {
    htmlContent: html,
    type: PlotType.WEB_APP,
  };

  it('renders some basic HTML', () => {
    const { asFragment } = render(<HTMLViewer configs={[config]} />);
    expect(asFragment()).toMatchSnapshot();
  });

  it('renders a smaller snapshot version', () => {
    const { asFragment } = render(<HTMLViewer configs={[config]} maxDimension={100} />);
    expect(asFragment()).toMatchSnapshot();
  });

  it('uses srcdoc to insert HTML into the iframe', async () => {
    const { container } = render(<HTMLViewer configs={[config]} />);
    await flushPromisesInAct();
    const iframe = container.querySelector('iframe') as HTMLIFrameElement | null;
    expect(iframe).not.toBeNull();
    expect(iframe?.srcdoc).toEqual(html);
    expect(iframe?.src).toEqual('about:blank');
  });

  it('keeps scripts inside an opaque-origin sandbox', () => {
    render(<HTMLViewer configs={[config]} />);
    expect(screen.getByTitle('HTML report')).toHaveAttribute('sandbox', 'allow-scripts');
  });

  it('renders, updates, and clears asynchronous report configs', () => {
    const { rerender } = render(<HTMLViewer configs={[]} />);
    expect(screen.queryByTitle('HTML report')).not.toBeInTheDocument();
    rerender(<HTMLViewer configs={[config]} maxDimension={100} />);
    expect(screen.getByTitle('HTML report')).toHaveAttribute('srcdoc', html);
    expect(screen.getByTitle('HTML report')).toHaveStyle({ height: '100px', minHeight: '100px' });
    rerender(<HTMLViewer configs={[{ ...config, htmlContent: '<p>Updated</p>' }]} />);
    expect(screen.getByTitle('HTML report')).toHaveAttribute('srcdoc', '<p>Updated</p>');
    expect(screen.getByTitle('HTML report')).toHaveStyle({ minHeight: '600px' });
    rerender(<HTMLViewer configs={[]} />);
    expect(screen.queryByTitle('HTML report')).not.toBeInTheDocument();
  });

  it('returns a user friendly display name', () => {
    expect(HTMLViewer.prototype.getDisplayName()).toBe('Static HTML');
  });
});
