// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HTMLViewer > does not break on empty data 1`] = `<DocumentFragment />`;

exports[`HTMLViewer > renders a smaller snapshot version 1`] = `
<DocumentFragment>
  <iframe
    class="kfp-html-viewer"
    sandbox="allow-scripts"
    src="about:blank"
    srcdoc="<html><body><div>Hello World!</div></body></html>"
    style="height: 100px; min-height: 100px;"
    title="HTML report"
  />
</DocumentFragment>
`;

exports[`HTMLViewer > renders some basic HTML 1`] = `
<DocumentFragment>
  <iframe
    class="kfp-html-viewer"
    sandbox="allow-scripts"
    src="about:blank"
    srcdoc="<html><body><div>Hello World!</div></body></html>"
    style="min-height: 600px;"
    title="HTML report"
  />
</DocumentFragment>
`;
